fixed testimonial and split

--- a/assets/style/custom.scss
+++ b/assets/style/custom.scss
@@ -1,12 +1,10 @@
-@import '~vuetify/src/styles/styles.sass';
-
-// The variables you want to modify
-$font-size-root: 18px;
-
-*{
-  font-size: 17px;
-}
-
 .primary-nav {
   max-width: 100vw !important;
+}
+
+.boxed-in {
+  border: .25em solid currentColor;
+  font-family: 'Overpass' !important;
+  font-display: auto;
+  font-weight: 900 !important;
 }
